; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/ipmi/extr_ipmi_kcs.c_kcs_wait_for_ibf.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/ipmi/extr_ipmi_kcs.c_kcs_wait_for_ibf.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ipmi_softc = type { i32 }

@KCS_STATUS_IBF = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ipmi_softc*, i32)* @kcs_wait_for_ibf to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @kcs_wait_for_ibf(%struct.ipmi_softc* %0, i32 %1) #0 {
  %3 = alloca %struct.ipmi_softc*, align 8
  %4 = alloca i32, align 4
  store %struct.ipmi_softc* %0, %struct.ipmi_softc** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.ipmi_softc*, %struct.ipmi_softc** %3, align 8
  %6 = load i32, i32* %4, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = load i32, i32* @KCS_STATUS_IBF, align 4
  br label %11

10:                                               ; preds = %2
  br label %11

11:                                               ; preds = %10, %8
  %12 = phi i32 [ %9, %8 ], [ 0, %10 ]
  %13 = load i32, i32* @KCS_STATUS_IBF, align 4
  %14 = call i32 @kcs_wait(%struct.ipmi_softc* %5, i32 %12, i32 %13)
  ret i32 %14
}

declare dso_local i32 @kcs_wait(%struct.ipmi_softc*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
